--- a/src/pages/contact/ContactComponent.css
+++ b/src/pages/contact/ContactComponent.css
@@ -5,6 +5,8 @@
 .basic-contact {
   margin-left: 5%;
   margin-right: 5%;
+  margin-top: 25%;
+  transform: translateY(-50%);
 }
 
 .contact-heading-div {
@@ -33,8 +35,10 @@
 }
 
 .contact-heading-img-div {
+  display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 12.5px;
 }
 
 .blog-heading-img-div {
@@ -43,7 +47,12 @@
 }
 
 .contact-heading-text-div {
+  margin-top: 12.5px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .blog-heading-text-div {
